Refactor controller tests