@@ -1,28 +1,34 @@
 package pl.telech.tmoney.bank.logic;
 
-import java.util.Collections;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import javax.annotation.PostConstruct;
+
 import org.apache.commons.lang3.tuple.Pair;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import lombok.RequiredArgsConstructor;
 import pl.telech.tmoney.bank.dao.AccountDAO;
+import pl.telech.tmoney.bank.dao.EntryDAO;
+import pl.telech.tmoney.bank.mapper.AccountMapper;
 import pl.telech.tmoney.bank.model.dto.AccountDto;
 import pl.telech.tmoney.bank.model.entity.Account;
 import pl.telech.tmoney.bank.model.entity.Entry;
-import pl.telech.tmoney.commons.logic.AbstractLogicImpl;
-import pl.telech.tmoney.commons.utils.TUtils;
+import pl.telech.tmoney.commons.logic.AbstractLogic;
 
 @Service
 @Transactional
-public class AccountLogic extends AbstractLogicImpl<Account> {
+@RequiredArgsConstructor
+public class AccountLogic extends AbstractLogic<Account> {
 	
-	static final Account summaryAccount;
+	private static final Account summaryAccount;
 	
-	AccountDAO dao;
+	final AccountDAO dao;
+	final EntryDAO entryDao; //TODO wywalić
+	final AccountMapper mapper;
 
 	
 	static {
@@ -32,9 +38,9 @@ public class AccountLogic extends AbstractLogicImpl<Account> {
 		summaryAccount.setName("Podsumowanie");
 	}
 	
-	public AccountLogic(AccountDAO dao) {
-		super(dao);
-		this.dao = dao;
+	@PostConstruct
+	public void init() {
+		super.dao = this.dao;
 	}
 	
 	public Account loadByCode(String code) {
@@ -49,46 +55,29 @@ public class AccountLogic extends AbstractLogicImpl<Account> {
 		return dao.findActive();
 	}
 	
-	public Account create(AccountDto _account) {
-		var account = new Account();
-		account.setCode(_account.getCode());
-		account.setName(_account.getName());
-		account.setActive(_account.getActive());
-		account.setColor(_account.getColor());
-		account.setLightColor(_account.getLightColor());
-		account.setDarkColor(_account.getDarkColor());
-		account.setOrderNo(_account.getOrderNo());
-		
-		return save(account);
+	public Account create(AccountDto accountDto) {
+		return save(mapper.create(accountDto));
 	}
 	
-	public Account update(int id, AccountDto _account) {
-		Account account = loadById(id);
-		TUtils.assertEntityExists(account);
-				
-		account.setName(_account.getName());
-		account.setActive(_account.getActive());
-		account.setColor(_account.getColor());
-		account.setOrderNo(_account.getOrderNo());
-		
+	public Account update(int id, AccountDto accountDto) {
+		Account account = loadById(id);			
+		mapper.update(account, accountDto);
 		return save(account);
 	}
 	
 	public List<Pair<Account, Entry>> getAccountSummaries(String accountCode) {	
 		List<String> accountCodes = accountCode != null
-				? Collections.singletonList(accountCode)
+				? List.of(accountCode)
 				: dao.findActive().stream().map(Account::getCode).collect(Collectors.toList());
 		
 		return getAccountSummaries(accountCodes);
 	}
 	
-	// ################################### PRIVATE #########################################################################
-	
 	private List<Pair<Account, Entry>> getAccountSummaries(List<String> accountCodes) {
 		return accountCodes.stream()
 				.map(code -> {
 					var account = dao.findByCode(code);
-					Entry entry = null; //entryLogic.loadLastByAccount(account.getId());
+					Entry entry = entryDao.findLastByAccountBeforeDate(account.getId(), LocalDate.now().plusDays(1));
 					return Pair.of(account, entry);
 				})
 				.collect(Collectors.toList());
